# d4wee

./: .env.production  .gitignore  Caddyfile  DEPLOYMENT.md  Procfile  SYNC_SETUP.md  d4wee-sync.service  d4wee-sync.timer  d4wee.service  deploy.ps1  deploy.sh  manage.py  pyproject.toml  requirements.txt  show_cohort_stats.py
.do/: app.yaml
classroom_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  services.py  urls.py  views.py
core/fixtures/: cohorts.json
core/management/commands/: cohort_stats.py  seed.py  sync.py  sync_classroom.py
core/migrations/: 0001_initial.py  0002_alter_student_google_id.py  0002_cohort_course_cohort.py  0003_cohort_closed_date_cohort_data_archived_and_more.py  0004_attendancerecord.py  0005_remove_attendancerecord_core_attend_date_07f009_idx_and_more.py
core/templates/account/: login.html  logout.html  password_reset.html  signup.html
core/templates/core/: attendance.html  base.html  cohort_detail.html  cohorts.html  course_detail.html  courses.html  dashboard.html  index.html  page.html  student_detail.html  students_list.html
core/templatetags/: custom_filters.py
d4wee/: asgi.py  settings.py  urls.py  wsgi.py
